--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^4.12.2",
     "astro-icon": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "fuse.js": "^7.0.0",
+    "lucide-react": "^0.417.0",
     "nanostores": "^0.10.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
     "satori": "^0.10.14",
-    "tailwindcss": "^3.4.6"
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss": "^3.4.6",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
