--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,11 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "baseUrl": "src",
     "jsx": "react-jsx",
+    "baseUrl": ".",
     "paths": {
-      "@assets/*": [
-        "assets/*"
-      ],
-      "@config": [
-        "config.ts"
-      ],
-      "@components/*": [
-        "components/*"
-      ],
-      "@content/*": [
-        "content/*"
-      ],
-      "@layouts/*": [
-        "layouts/*"
-      ],
-      "@pages/*": [
-        "pages/*"
-      ],
-      "@styles/*": [
-        "styles/*"
-      ],
-      "@utils/*": [
-        "src/utils/*"
+      "@/*": [
+        "./src/*"
       ]
     },
     "jsxImportSource": "react"
